  * Document new boot parameters to define mouse protocol and device (port)
    for the graphical installer.
  * Correct command to use to allow preseeding of netcfg when using a
    preconfiguration file downloaded from a server (preseed/url).
    Thanks to Durk Strooisma for the report and analysis. Closes: #476524.
  * Specify for which release the example preseed file is valid.

  [ Joey Hess ]
  * Remove autopartkit from the module list.

 -- Frans Pop <fjp@debian.org>  Thu, 24 Apr 2008 13:14:07 +0200

installation-guide (20080211) unstable; urgency=low

  [ Martin Michlmayr ]
  * Remove all information about RiscPC because these machines are
    no longer supported.

  [ Joey Hess ]
  * Document the new tasksel/desktop preseed for lenny.

  [ Frans Pop ]
  * Add cm-super to build dependencies as that improves the quality of the
    Russian PDF version.
  * Suggest 'nousb' instead of debian-installer/probe/usb as USB modules are
    now loaded automatically.
  * Fix incorrect instruction for preseeding local repositories.
    Thanks to Rémi Demarthe. Closes: #420894.
  * Add translatable entities for Continue, Cancel and Go Back buttons.
  * Add build dependencies on texlive-lang-* packages for languages for which
    the manual has translations.
  * Document new boot parameters "lowmem" and "dmraid".
  * Document new location of graphical mini.iso images.
  * Document base-installer/kernel/image preseed.

  [ Joey Hess ]
  * Document new lilo-installer/skip preseed.
  * Document passwd/user-default-groups preseed.

  [ Colin Watson ]
  * Recommend preseeding mirror/country to "manual" rather than "enter
    information manually" (choose-mirror 2.17).
  * Remove text talking about devfs-style device names, which are no longer
    supported.
  * preparing/minimum-hardware-reqts.xml: Pluralise "gigabyte" consistently.

  [ Joey Hess ]
  * Document clock-setup/ntp.

  [ Frans Pop ]
  * Support for sparc32 has been discontinued for Lenny. This also means that